# btrace

./: .gitignore  CONTRIBUTING.MD  GRADLE_CONFIG.MD  GRADLE_CONFIG.zh-CN.MD  INTRODUCTION.MD  INTRODUCTION.zh-CN.MD  LICENSE  README.MD  README.zh-CN.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
btrace-android/: .gitignore  GRADLE_CONFIG.zh-CN.MD  build.gradle  gradle.properties  settings.gradle
btrace-android/app/: build.gradle
btrace-android/gradle/: checkStyle.gradle  gradle-maven-upload.gradle  java-artifacts.gradle
btrace-android/rhea-android/rhea-atrace/src/main/cpp/utils/: CMakeLists.txt  file.cpp  npth_dl.c  npth_dl.h  proc_fs.cpp  timers.cpp  xcc_fmt.h
btrace-android/rhea-android/rhea-atrace/src/main/cpp/utils/include/utils/: timers.h
btrace-android/rhea-common/: build.gradle  gradle.properties
btrace-android/rhea-library/rhea-inhouse/src/main/cpp/: CMakeLists.txt  RheaContext.cpp  RheaContext.h  RheaOnLoad.cpp  TraceAbilityJni.cpp  TraceGlobalJni.cpp
btrace-android/rhea-library/rhea-inhouse/src/main/cpp/base/: PerfBuffer.h  PerfCollector.h  PerfCollectorBaseImpl.h  RingBuffer.h  common_write.h
btrace-android/rhea-library/rhea-inhouse/src/main/cpp/sampling/: SamplingCollector.cpp  SamplingCollector.h  SamplingConfig.cpp  SamplingConfig.h  SamplingRecord.h  Stack.cpp  Stack.h  StackVisitor.cpp  StackVisitor.h
btrace-android/rhea-library/rhea-inhouse/src/main/cpp/stat/: JavaObjectStat.cpp  JavaObjectStat.h
btrace-android/rhea-library/rhea-inhouse/src/main/cpp/trace/: SamplingTrace.cpp  SamplingTrace.h  TraceBinderCall.cpp  TraceBinderCall.h  TraceGC.cpp  TraceGC.h  TraceJNICall.cpp  TraceJNICall.h  TraceJavaMonitor.cpp  TraceJavaMonitor.h  TraceLoadLibrary.cpp  TraceLoadLibrary.h  TraceMessageIDChange.cpp  TraceMessageIDChange.h  TraceObjectWait.cpp  TraceObjectWait.h  TraceUnsafePark.cpp  TraceUnsafePark.h
btrace-android/rhea-library/rhea-inhouse/src/main/cpp/trace/java_alloc/: TraceJavaAlloc.cpp  TraceJavaAlloc.h  checkpoint.cpp  checkpoint.h  java_alloc_common.h  thread_list.cpp  thread_list.h
btrace-android/rhea-library/rhea-inhouse/src/main/cpp/utils/: JNIHook.cpp  JNIHook.h  log.h  misc.h  npth_dl.c  npth_dl.h  scoped_dlopen.h  time.h
btrace-android/rhea-trace/: preciseTraceFilter.txt
btrace-iOS/: BTrace.podspec  BTraceDebug.podspec
btrace-iOS/BTraceTool/: .gitignore  README.md  README.zh-CN.md  pyproject.toml
btrace-iOS/BTraceTool/btrace/: __init__.py  __main__.py  app.py  cli.py  device.py  export.py  extractor.py  model.py  open_trace.py  parse.py  perfetto.py  statistics.py  symbol_info.py  util.py
btrace-iOS/BTraceTool/btrace/pb/: perfetto.proto  perfetto_pb2.py
gradle/: android-artifacts.gradle  gradle-maven-upload.gradle  java-artifacts.gradle
rhea-android/rhea-atrace/: CMakeLists.txt  build.gradle
rhea-android/rhea-atrace/src/main/: AndroidManifest.xml
rhea-android/rhea-atrace/src/main/cpp/: binary_trace.cpp  rhea_atrace_jni.cpp
rhea-android/rhea-atrace/src/main/cpp/features/binder/: binder_proxy.h
rhea-android/rhea-atrace/src/main/cpp/features/block/: block_jni.cpp
rhea-android/rhea-atrace/src/main/cpp/features/io/: io_proxy.cpp  io_proxy.h
rhea-android/rhea-atrace/src/main/cpp/features/memory/: jvmti_agent.cpp
rhea-android/rhea-atrace/src/main/cpp/features/render/: render_proxy.cpp
rhea-android/rhea-atrace/src/main/cpp/features/thread/: thread_proxy.cpp
rhea-android/rhea-atrace/src/main/cpp/features/trace/: trace_proxy.cpp
rhea-android/rhea-atrace/src/main/cpp/hook/: hook_bridge.cpp
rhea-android/rhea-atrace/src/main/cpp/include/: atrace.h  trace.h  trace_provider.h
rhea-android/rhea-atrace/src/main/cpp/second_party/byte_hook/: bytehook.h  shadowhook.h
rhea-android/rhea-atrace/src/main/cpp/trace/: atrace.cpp  native_trace_callbacks.cpp  native_trace_callbacks.h  recoder.cpp  trace_dev.cpp  trace_provider.cpp
rhea-android/rhea-atrace/src/main/cpp/utils/: CMakeLists.txt  file.cpp  fs.cpp  logger.h  npth_dl.c  npth_dl.h  threads.cpp  timers.cpp  xcc_fmt.c
rhea-android/rhea-atrace/src/main/cpp/utils/include/utils/: build.h  debug.h  file.h  fs.h  macros.h  proc_fs.h  strings.h  threads.h  timers.h
rhea-android/rhea-atrace/src/main/java/com/bytedance/rheatrace/atrace/: RheaATrace.java
rhea-android/rhea-atrace/src/main/java/com/bytedance/rheatrace/atrace/render/: AttachRenderLayoutInflater.java  LayoutInflaterFetcher.java  RenderTracer.java  RenderUtils.java
rhea-trace/: commonTraceFilter.txt  traceFilter.txt
(+871 files in other folders)
